--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11045,6 +11045,7 @@ body.template-color-1 {
 
 .logo a {
   display: inline-block;
+  color: var(--color-body) !important;
 }
 
 .logo a img {
@@ -11186,8 +11187,7 @@ body.template-color-1 {
   z-index: 99;
   width: auto;
   right: 0;
-  left: 0;
-  background: #ecf0f3;
+  left: 0;  
 }
 
 .header-style-2 .header-right .hamberger-menu i {
@@ -11433,7 +11433,7 @@ body.template-color-1 {
 .social-share-style-1 {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   padding-top: 20px;
-  margin-top: 100px !important;
+  margin-top: 50px !important;
 }
 
 .social-share-style-1 .social-share li {
